# dd-task-fiodor

./: .env.example  .gitattributes  .gitignore  CHANGES.md  COMPLETION_STATUS.md  DELIVERABLES.md  EXTENSION_IMPLEMENTATION_COMPLETE.md  EXTENSION_VERIFICATION.md  GROUNDING_EXTENSION.md  GROUNDING_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  IaC-README.md  README.md  START_HERE.md  STATISTICS_EXTENSION.md  STATISTICS_INTEGRATION_GUIDE.md  TASK.md  VERIFICATION.md  analysis_results.md  demo_grounding.py  demo_statistics.py  explanation.md  generate_golden.py  pyproject.toml  requirements-dev.txt  test_cut_planner_debug.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/agents/: ascenta-expert.agent.md
.github/workflows/: devcontainer-build.yml
data/demo/: eval_cases.yaml  segments.json
src/dd_agent/: __init__.py  cli.py  config.py  run_store.py
src/dd_agent/contracts/: __init__.py  filters.py  questions.py  specs.py  tool_output.py  validate.py
src/dd_agent/engine/: __init__.py  executor.py  masks.py  metrics.py  statistical_comparison.py  statistical_tables.py  statistics.py  tables.py
src/dd_agent/eval/: __init__.py  harness.py  (+1 more)
tests/: conftest.py  golden_validation.json  test_end_to_end_mock_llm.py  test_metrics.py  test_validation.py
validation/: README.md  test_agentic_planning.py  validate_all.py  validate_cut_planning.py  validate_e2e.py  validate_engine.py  validate_high_level_planner.py  validate_segment_builder.py
validation/golden_data/: golden_high_level.json  golden_segments.json  golden_validation.json
(+51 files in other folders)
